--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "ag-grid-react": "^26.2.0",
     "antd": "^4.17.4",
+    "axios": "^0.24.0",
     "history": "^4.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-table": "^7.7.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
